# QuantFlowNLP

./: API_TEST_RESULTS.md  BUGFIX_BOND_PRICING.md  CHROMADB_SETUP.md  Makefile  QUICKSTART.md  README.md  README_FINAL.md  SETUP_COMPLETE.md  TESTING_GUIDE.md  docker-compose.yml  main.py  pyproject.toml  run_server.sh
app/: __init__.py  main.py
app/adapters/: chromadb_client.py  database.py  ollama_client.py
app/adapters/news_sources/: __init__.py  base.py  bloomberg.py  investing_com.py  marketwatch.py  reuters.py  yahoo_finance.py
app/api/: __init__.py  dependencies.py
app/api/routers/: __init__.py  features.py  health.py  news.py  nlp.py  portfolio.py  predictions.py  quant.py
app/core/: __init__.py  config.py  constants.py  exceptions.py
app/repositories/: __init__.py  analysis_repository.py  article_repository.py  base.py  ohlcv_repository.py  scaler_repository.py  vector_repository.py
app/services/: __init__.py  black_scholes.py  bond_pricer.py  cvxpy_optimizer.py  feature_engineering.py  model_loader.py  news_ingestion.py  nlp_analysis.py  portfolio_optimization.py  prediction.py  pypfopt_adapter.py  quantitative_finance.py  yield_curve_builder.py
app/utils/: __init__.py  circuit_breaker.py  logging.py  retry.py
config/: __init__.py
model_downloaded/: config.json  metrics.json  scaler_params.json
scripts/: __init__.py  init_db.py  load_scaler_params.py  start_server.py  test_all_endpoints.py
tests/: conftest.py  test_api_endpoints.py
tests/integration/: test_load_scaler_params.py  test_quantitative_finance_integration.py
tests/unit/test_adapters/: test_ollama_client.py
tests/unit/test_repositories/: test_article_repository.py  test_vector_repository.py
tests/unit/test_services/: test_feature_engineering.py  test_news_ingestion.py  test_nlp_analysis.py  test_portfolio_optimization.py  test_prediction.py  test_prediction_integration.py  test_quantitative_finance.py
tests/unit/test_utils/: test_circuit_breaker.py  test_retry.py
